# stohastic_overlap_tracker

./: CMakeLists.txt  README.md  best_params_0.json  best_params_1.json  scheme.drawio
include/: Agent.hpp  DefaultParams.hpp  Evaluator.hpp  GeneratorParams.hpp  MutationParams.hpp  PrecisionEvaluator.hpp  RandomParams.hpp  TestVideo.hpp
src/: CMakeLists.txt  main.cpp
